docker/001-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: test-app
  labels:
    type: test-app
