docker/002-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app-deployment
  namespace: test-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: test-app-container
        image: node79989-cjb-private-registry.hidora.com:5000/mywhoami:v1.5.2
        imagePullPolicy: IfNotPresent
        # testapp:latest
        # readinessProbe:
        #   httpGet:
        #     path: /health
        #     port: 80
        #   initialDelaySeconds: 15
        #   timeoutSeconds: 1
